<resources>
    <string name="app_name" translatable="false">FitShare</string>
    <string name="start" translatable="false">Start</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="timeWatch" translatable="false">00:00:00</string>
    <string name="title_activity_chest" translatable="false">chestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="chest_workout_header" translatable="false">Chest Workout</string>
    <string name="weightTV" translatable="false">Weight</string>
    <string name="exerciseTV" translatable="false">Exercise</string>
    <string name="repsTV" translatable="false">Reps</string>
    <string name="new_exerciseTV" translatable="false">New Exercise</string>
    <string name="timerStartValue">00:00:00</string>
    <string name="kg">KG</string>
    <string name="add_change">Add/Change</string>
    <string name="weight">Weight</string>
    <string name="exercise">Exercise</string>
    <string name="reps">Reps</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="delete">Delete</string>
    <string name="start_timer_description">Start Timer</string>
    <string name="restart_timer_description">Restart Timer</string>
    <string name="chest">Chest</string>
    <string name="back">Back</string>
    <string name="legs">Legs</string>
    <string name="back_workout">Back Workout</string>
    <string name="legs_workout">Legs Workout</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="fitshare">fitshare</string>
    <string name="welcome_to_fitshare">Welcome to fitshare</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="hints">Hints</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="age">Age</string>
    <string name="e_mail">e-mail</string>
    <string name="recover_password">Recover Password</string>
    <string name="your_password">Your Password :</string>
    <string name="unable_to_recover_password">Unable to recover password</string>
    <string name="try_again">Try Again</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">email</string>
    <string name="show_user_list">show user list</string>
    <string name="logout">logout</string>
    <string name="back_to_main">Back To Main</string>
    <string name="passwordListItem">Password :</string>
    <string name="usernameListItem">Username :</string>
    <string name="adminListItem">Admin</string>
</resources>