<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:background="@drawable/roundtimer"
        android:backgroundTint="#C8C5C5C5"
        android:fontFamily="@font/digital7i"
        android:gravity="center"
        android:text="@string/timerStartValue"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <ImageButton
        android:id="@+id/btStart"
        android:layout_width="78dp"
        android:layout_height="64dp"
        android:background="@drawable/roundcorner"
        android:backgroundTint="#C8C5C5C5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31"
        app:srcCompat="@drawable/playbtn"
        android:contentDescription="@string/start_timer_description" />

    <ImageButton
        android:id="@+id/btReset"
        android:layout_width="78dp"
        android:layout_height="64dp"
        android:backgroundTint="#C8C5C5C5"
        android:background="@drawable/roundcorner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31"
        app:srcCompat="@drawable/resetbtn"
        android:contentDescription="@string/restart_timer_description" />

    <Button
        android:id="@+id/chestPage"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundtimer"
        android:text="@string/chest"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="30sp"
        android:fontFamily="@font/oldsportathletic"
        app:backgroundTint="@color/btnbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <Button
        android:id="@+id/backPage"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundtimer"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="30sp"
        android:fontFamily="@font/oldsportathletic"
        app:backgroundTint="@color/btnbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/legsPage"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundtimer"
        android:text="@string/legs"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="30sp"
        android:fontFamily="@font/oldsportathletic"
        app:backgroundTint="@color/btnbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>