<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/addexercisewallpaper"
    android:textAlignment="center"
    android:textDirection="firstStrongLtr"
    tools:context=".setChest">

    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundtimer"
        android:backgroundTint="#81C5C5C5"
        android:text="@string/add_change"
        android:textColor="#FFFFFF"
        android:textSize="85sp"
        android:fontFamily="@font/workoutfont"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundtimer"
        android:backgroundTint="#C8C5C5C5"
        android:text="@string/weight"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="@font/oldsportathletic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302" />

    <TextView
        android:id="@+id/exercise"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundtimer"
        android:backgroundTint="#C8C5C5C5"
        android:text="@string/exercise"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="17sp"
        android:fontFamily="@font/oldsportathletic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302" />

    <TextView
        android:id="@+id/repetitions"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundtimer"
        android:backgroundTint="#C8C5C5C5"
        android:text="@string/reps"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="@font/oldsportathletic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302" />

    <EditText
        android:id="@+id/repsInput"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/roundtimer"
        android:backgroundTint="#C8C5C5C5"
        android:ems="4"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text=""
        android:textAlignment="center"
        android:textDirection="firstStrongLtr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repetitions"
        app:layout_constraintVertical_bias="0.038"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/roundtimer"
        android:backgroundTint="#C8C5C5C5"
        android:ems="4"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text=""
        android:textAlignment="center"
        android:textDirection="firstStrongLtr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight"
        app:layout_constraintVertical_bias="0.037"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/firstExSpinner"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/roundtimer"
        android:backgroundTint="#C8C5C5C5"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        android:gravity="center"
        android:textDirection="firstStrongLtr"
        android:fontFamily="@font/sairasemi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/addexercise"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundtimer"
        android:backgroundTint="#C8C5C5C5"
        android:text="@string/add_exercise"
        android:fontFamily="@font/oldsportathletic"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751" />

    <Button
        android:id="@+id/addEx"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundtimer"
        android:fontFamily="@font/sairasemi"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textAlignment="center"
        android:gravity="center"
        app:backgroundTint="@color/btnbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseInput"
        app:layout_constraintVertical_bias="0.361" />

    <Button
        android:id="@+id/saveExercise"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:background="@drawable/roundtimer"
        android:fontFamily="@font/sairasemi"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textAlignment="center"
        android:gravity="center"
        app:backgroundTint="@color/btnbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />

    <EditText
        android:id="@+id/exerciseInput"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/roundtimer"
        android:backgroundTint="#C8C5C5C5"
        android:ems="4"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:textDirection="firstStrongLtr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addexercise"
        app:layout_constraintVertical_bias="0.139"
        tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/removeex"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundtimer"
        android:backgroundTint="#C8C5C5C5"
        android:text="@string/delete_exercise"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:fontFamily="@font/oldsportathletic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751" />

    <EditText
        android:id="@+id/deleteExInput"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/roundtimer"
        android:backgroundTint="#C8C5C5C5"
        android:ems="4"
        android:gravity="center"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text=""
        android:textAlignment="center"
        android:textDirection="firstStrongLtr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeex"
        app:layout_constraintVertical_bias="0.139"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/removeEx"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundtimer"
        android:fontFamily="@font/sairasemi"
        android:gravity="center"
        android:text="@string/delete"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="30sp"
        app:backgroundTint="@color/btnbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteExInput"
        app:layout_constraintVertical_bias="0.361" />

</androidx.constraintlayout.widget.ConstraintLayout>